lab1/Test/L1-A-11-32.cmm
struct {
  struct C6o1sQNqwkzIxxnC8Iu {
  }zCsOqwV2 , iQX = YqvGSb4L = WNljqv_8zKsTjHbLSA1 
    && XIEGXuujsEXF - - pzU ( ZxRsPoqRCriPlM , AY4DgK 
    || tQDxDMQl94nw5v <= RempD25nYPR54DJhK + ToJG0sazTSW4UEk 
    * - o2eq3wss6ih3 [ SuLsq = nB >= cKG - ( K0G2DQmvyLhEe0WzbT 
    != j == VpBUmj5WgI3osA ) < xSwNNA9 > 97578577 ] ) 
    * nJU ( ) / - ! 1258673901.320931459 . IEBMOWke7clG 
    ;
};
struct JUBpCb gI8msoGCgMKZxRkJ int x08CU6sZsSX , struct 
  {
}W_0wICw9Pi7 ) {
  float aOo_5 [ 1971740892 ] ;
}
int I3FPN 
;
int r6c3KelMq1vrhSpu , y1icNQbOncGNX8Ub 

;
int BX66G14GQzQ6 ( {
  NIuBanRuyi5r ;
  XRx ;
  NgkTBTCA ;
  if ( nQAiGYLGqr ) {
    if ( A7YU )     while ( oxnGCBuGG8BhmA )     lXEq4VHj 
      ;

else     sg984 ;

  }else   if ( ZLULqAmh9kOA1O )   return eMYoT_ ;


}
, / 